# jax-whisper-align

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  setup.sh
app/: app.py
benchmarks/: run_pjit.py  run_pjit_dataloader.py
infer/: align.py  api.py  app.py  infererence.py  install.sh  install_gpu.sh  requirements.txt  test.py
src/jaxwhisperalign/: __init__.py  align.py  app.py  infererence.py  modeling_flax_whisper.py  vad.py
whisper_jax/: layers.py
